<resources>
    <string name="app_name">Yamaha Customer Arsenal</string>
    <string name="action_settings">Settings</string>
    <string name="usename">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="action_close">close</string>
    <string name="register">New user? Register here</string>
    <string name="register_text">Register</string>
    <string name="name_hint">name</string>
    <string name="mobile_hint">....</string>
    <string name="address">address</string>
    <string name="submit">Submit</string>
    <string name="engine_hint">engine no</string>
    <string name="chassis_hint">chassis no</string>
    <string name="address_hint">address</string>
    <string name="title_activity_order_new_customer">OrderNewCustomerActivity</string>
    <string name="password_hint">password</string>
    <string name="test">test</string>
    <string name="aci">ACI</string>
    <string name="slogan">Advancing Possibilities</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="title_activity_nav">Yamaha customer arsenal</string>
    <string name="inquiry">Inquiry</string>
    <string name="title_activity_inquiry">Inquiry</string>
    <string name="inquiryTitle">Do you have any inquiry?</string>
    <string name="writeHere">Write here...</string>
    <string name="send">Send</string>
    <string name="title_activity_complain">Complain</string>
    <string name="complain_issues">Complain issues</string>
    <string name="what_complain">What is your complain</string>
    <string name="complain">Complain</string>
    <string name="title_activity_bike_addition">Add Bike</string>
    <string name="purchase_date">purchase date</string>
    <string name="add">Add</string>
    <string name="title_activity_service">Service</string>
    <string name="service">Service Ticket</string>
    <string name="pb_detail">write problem details here</string>
    <string name="contacts">Contacts</string>
    <string name="title_activity_service_stats">Service stats</string>
    <string name="newService">New service</string>
    <string name="pendingService">Pending service</string>
    <string name="receivedService">Done service</string>
    <string name="totalRaisedService">Total service raised </string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_dispaly_service">Dispaly Service</string>
    <string name="inquiry_label">Inquiry message</string>
    <string name="inquiry_sub_label">Inquiry subject</string>
    <string name="title_activity_contact">Contact us</string>
    <string name="get_in_touch">GET IN TOUCH</string>
    <string name="title_activity_inquiry_inbox">InquiryInboxActivity</string>
    <string name="no_inquiry">No inquiry</string>
    <string name="title_activity_complain_view">Complains</string>
    <string name="mobile">Mobile no.</string>
</resources>
