<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:weightSum="5"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aci.yamaha.yamahacustomerarsenal.activity.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="4">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="false"
                android:layout_marginTop="150px"
                android:background="@drawable/angle_bg"
                android:gravity="center">

                <EditText
                    android:id="@+id/userIdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/border_bottom"
                    android:drawableLeft="@drawable/ic_action_user"
                    android:hint="@string/mobile"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userIdEditText"
                    android:layout_margin="10dp"
                    android:background="@drawable/border_bottom"
                    android:drawableLeft="@drawable/ic_action_password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/passwordEditText"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/sign_in"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginButton"
                    android:background="@null"
                    android:gravity="right"
                    android:paddingRight="15dp"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/cccccc" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/border_circle">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="10dp"
                    android:src="@drawable/user" />
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>

